# preconfirmation-gateway

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  Taskfile.yml  config.toml  docker-compose.yml  gateway.config.toml  proposer.config.toml  run_gateway.sh  rustfmt.toml  scratch.md  spammer-config.toml
config/: gateway.config.toml  gateway.docker.toml  proposer.config.toml  proposer.docker.toml  relay.config.toml  relay.docker.toml  relay.toml  signer.config.toml  signer.docker.toml  simulation.config.toml  spammer.config.toml  spammer.docker.toml
crates/commitments/: Cargo.toml
crates/commitments/src/: handlers.rs  lib.rs  methods.rs  metrics.rs  server.rs  state.rs  utils.rs
crates/common/: Cargo.toml
crates/common/bindings/urc/: Cargo.toml
crates/common/bindings/urc/src/: bar.rs  bls.rs  bls_utils.rs  blsutils.rs  bytes_utils.rs  bytesutils.rs  dummy_slasher.rs  dummyslasher.rs  ecdsa.rs  ecdsa_utils.rs  enumerable_set.rs  enumerableset.rs  foo.rs  i_reentrant_contract.rs  i_registry.rs  i_slasher.rs  ierc165.rs  ierc20.rs  ierc721.rs  ierc721_enumerable.rs  ierc721_metadata.rs  ierc721_token_receiver.rs  ierc721enumerable.rs  ierc721metadata.rs  ierc721tokenreceiver.rs  inclusion_preconf_slasher.rs  inclusionpreconfslasher.rs  ireentrantcontract.rs  iregistry.rs  islasher.rs  lib.rs  math.rs  merkle_proof_lib.rs  merkle_tree.rs  merkle_tree_lib.rs  merkle_trie.rs  merkleprooflib.rs  merkletree.rs  merkletreelib.rs  merkletrie.rs  (+28 more)
crates/common/src/: beacon.rs  config.rs  constants.rs  execution.rs  lib.rs  logging.rs  proofs.rs  signer.rs  signing.rs  slot_timer.rs  utils.rs
crates/common/src/db/: mod.rs
crates/common/src/types/: beacon.rs  commitments.rs  constraints.rs  context.rs  database.rs  inclusion.rs  mod.rs  requests.rs  responses.rs  urc.rs
crates/constraints/: Cargo.toml
crates/constraints/src/: client.rs  handlers.rs  lib.rs  metrics.rs  server.rs  service.rs  utils.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: config.rs  constraints.rs  coordinator.rs  delegations.rs  lib.rs  metrics.rs
crates/pricer/: Cargo.toml
crates/pricer/src/: lib.rs
crates/proposer/: Cargo.toml
crates/proposer/src/: cli.rs  config.rs  lib.rs  metrics.rs  urc_registration.rs  utils.rs
crates/relay/: Cargo.toml
crates/relay/src/: config.rs  database.rs  handlers.rs  lib.rs  metrics.rs  proposer_lookahead.rs  server.rs  utils.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: constraints.rs  coordinator.rs  delegations.rs  lib.rs  pricer.rs  proposer_lookahead.rs  slot_timer.rs
docs/: URC_REGISTRATION.md
provisioning/: beacon-mock.Dockerfile  build.Dockerfile  gateway.Dockerfile  proposer.Dockerfile  protoc.sh  relay.Dockerfile  signer.Dockerfile  spammer.Dockerfile
src/: config.rs  lib.rs  main.rs  server.rs  signing.rs
src/commitments/: handlers.rs  methods.rs  mod.rs  utils.rs
src/db/: context.rs  mod.rs
src/rpc/: context.rs  handlers.rs  methods.rs  mod.rs  types.rs  utils.rs
src/types/: commitments.rs  context.rs  database.rs  mod.rs  responses.rs  rpc.rs
tests/: Cargo.toml  commitment_request_spec.rs  commitment_result_spec.rs  common.rs  config_test.rs  fee.rpc-handler.rs  fee_spec.rs  handler_tests.rs  integration.rs  rpc_handlers.rs  signature_tests.rs
tests/data/keystores/keys/: anvil-0
tests/data/proxy/gateway-module/ecdsa/: 0x73892d18EACa21E8C1Aca89c147069C9D9f6625D
tests/data/proxy/proposer-module/ecdsa/: 0x619E06F6cFAC99e0F184B41bb7FE7DDAED0bCFca
tests/rpc-handlers/: fee.spec.rs
tests/src/: lib.rs  test_common.rs  urc_helpers.rs
tests/tests/: README.md  beacon_integration_spec.rs  commitment_request_spec.rs  commitment_result_spec.rs  commitments_integration_spec.rs  config_test.rs  fee_spec.rs  generate_proxy_key_test.rs  integration.rs  proposer_integration_spec.rs  relay_integration_spec.rs  relay_request_spec.rs  signature_tests.rs  test_service_launch.rs  test_signed_tx_verification.rs  urc_add_collateral_spec.rs  urc_claim_slashed_collateral_spec.rs  urc_get_slasher_commitment_spec.rs  urc_opt_in_spec.rs  urc_opt_out_spec.rs  urc_registration_spec.rs  urc_unregister_and_claim_spec.rs
