[workspace]
members = [
    "bin",
    "crates/common",
    "crates/commitments",
    "crates/constraints",
    "crates/relay",
    "crates/gateway",
    "crates/proposer",
    "tests",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.99"
eyre = "0.6"
config = "0.15.15"
rocksdb = "0.22"
futures = "0.3.31"
http-body = "1.0.1"
http-body-util = "0.1.3"
jsonrpsee = { version = "0.26.0", features = ["http-client", "server", "client-core"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
alloy = { version = "^1.0.35", features = [
    "full",
    "getrandom",
    "node-bindings",
    "providers",
    "rpc-types-beacon",
    "serde",
    "signer-local",
    "ssz",
] }
alloy-primitives = "^1.3.1"
alloy-consensus = "^1.0.37"
commit-boost = { git = "https://github.com/Commit-Boost/commit-boost-client", branch = "fabric" }
cb-common = { git = "https://github.com/Commit-Boost/commit-boost-client", branch = "fabric" }
cb-signer = { git = "https://github.com/Commit-Boost/commit-boost-client", branch = "fabric" }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
urc = { path = "./crates/common/bindings/urc" }
hex = "0.4"
axum = { version = "0.8", features = ["macros", "multipart"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
tempfile = "3.8"
prometheus = "0.14.0"
lazy_static = "1.5.0"
indexmap = "2.2.6"

# for merkle proofs
reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "42197415102b7a20be42e4fe919f024b81ceb55b" }
eth_trie = "0.4.0"
ethereum-types = "0.14.1"
alloy-rlp = "0.3.10"
bincode = "1.3"

[patch.crates-io]
blstrs_plus = { git = "https://github.com/Commit-Boost/blstrs" }
