[workspace]
members = [
    "bin",
    "crates/common",
    "crates/commitments",
    "crates/constraints",
    "crates/relay",
    "crates/gateway",
    "crates/proposer",
    "tests",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.99"
eyre = "0.6"
config = "0.15.15"
rocksdb = "0.22"
futures = "0.3.31"
http-body = "1.0.1"
http-body-util = "0.1.3"
jsonrpsee = { version = "0.26.0", features = ["http-client", "server", "client-core"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
alloy = { version = "^1.0.35", features = [
    "full",
    "getrandom",
    "node-bindings",
    "providers",
    "rpc-types-beacon",
    "serde",
    "signer-local",
    "ssz",
    "consensus",
    "rlp"
] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
urc = { path = "./crates/common/bindings/urc" }
hex = "0.4"
axum = { version = "0.8", features = ["macros", "multipart"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
prometheus = "0.14.0"
lazy_static = "1.5.0"
indexmap = "2.2.6"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
blst = "0.3"
tokio-test = "0.4"
rand = "0.8"
mockall = "0.13"

# commit-boost = { git = "https://github.com/Commit-Boost/commit-boost-client", branch = "fabric" }
# cb-common = { git = "https://github.com/Commit-Boost/commit-boost-client", branch = "fabric" }
# cb-signer = { git = "https://github.com/Commit-Boost/commit-boost-client", branch = "fabric" }
# cb-tests = { git = "https://github.com/Commit-Boost/commit-boost-client", branch = "fabric" }
commit-boost = { path = "../../commit-boost/commit-boost-client/bin" }
cb-common = { path = "../../commit-boost/commit-boost-client/crates/common" }
cb-signer = { path = "../../commit-boost/commit-boost-client/crates/signer" }
cb-tests = { path = "../../commit-boost/commit-boost-client/tests" }


# for merkle proofs
eth_trie = "0.4.0"
ethereum-types = "0.14.1"
bincode = "1.3"

[patch.crates-io]
blstrs_plus = { git = "https://github.com/Commit-Boost/blstrs" }
