[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../crates/common", features = ["test-utils"] }
commitments = { path = "../crates/commitments" }
constraints = { path = "../crates/constraints" }
relay = { path = "../crates/relay" }
gateway = { path = "../crates/gateway" }
proposer = { path = "../crates/proposer" }
anyhow = { workspace = true }
eyre = { workspace = true }
config = { workspace = true }
rocksdb = { workspace = true }
futures = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
commit-boost = { workspace = true }
cb-tests = { git = "https://github.com/Commit-Boost/commit-boost-client", branch = "fabric" }
cb-common = { git = "https://github.com/Commit-Boost/commit-boost-client", branch = "fabric" }
cb-signer = { git = "https://github.com/Commit-Boost/commit-boost-client", branch = "fabric" }
urc = { workspace = true }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
tempfile = "3.8"
tokio-test = "0.4"
rand = "0.8"
axum = "0.8"
hex = "0.4"
sha2 = "0.10"