[package]
name = "integration-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { package = "fabric-common", path = "../crates/common", features = ["test-utils"] }
commitments = { package = "fabric-commitments", path = "../crates/commitments" }
constraints = { package = "fabric-constraints", path = "../crates/constraints" }
relay = { package = "fabric-relay", path = "../crates/relay" }
gateway = { package = "fabric-gateway", path = "../crates/gateway" }
proposer = { package = "fabric-proposer", path = "../crates/proposer" }
anyhow = { workspace = true }
eyre = { workspace = true }
config = { workspace = true }
rocksdb = { workspace = true }
futures = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
alloy = { workspace = true }
commit-boost = { workspace = true }
cb-tests = { workspace = true }
cb-common = { workspace = true }
cb-signer = { workspace = true }
urc = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
rand = { workspace = true }
axum = { workspace = true }
hex = { workspace = true }
sha2 = "0.10"