[package]
name = "commitments"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
eyre = { workspace = true }
futures = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
jsonrpsee = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
commit-boost = { workspace = true }
cb-common = { workspace = true }

[dev-dependencies]
rocksdb = { workspace = true }
tempfile = { workspace = true }
