[package]
name = "fabric-common"
version = "0.1.0"
edition = "2024"

[features]
test-utils = ["mockall"]

[dependencies]
mockall = { workspace = true, optional = true }
eyre = { workspace = true }
config = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
alloy = { workspace = true }
commit-boost = { workspace = true }
hex = { workspace = true }
urc = { workspace = true }
reqwest = { workspace = true }
blst = { workspace = true }

# for merkle proofs
eth_trie = { workspace = true }
ethereum-types = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
rand = { workspace = true }
mockall = { workspace = true }
cb-tests = { workspace = true }
cb-signer = { workspace = true }
cb-common = {workspace = true }
