[package]
name = "constraints"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
urc = { workspace = true }
alloy = { workspace = true }
commit-boost = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
blst = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing-subscriber = "0.3"

#  todo eventually remove
cb-common = { git = "https://github.com/Commit-Boost/commit-boost-client", branch = "fabric" }

