[package]
name = "fabric-constraints"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { package = "fabric-common", path = "../common" }
urc = { workspace = true }
alloy = { workspace = true }
commit-boost = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
blst = { workspace = true }

# HTTP client for relay communication
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Metrics
prometheus = { workspace = true }
lazy_static = { workspace = true }

#  todo eventually remove
cb-common = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
mockall = "0.12"
