[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
rocksdb = { workspace = true }
tempfile = "3.8"
hex = "0.4"
commit-boost = { workspace = true }
cb-common = { workspace = true }

# Workspace dependencies
common = { path = "../common" }
constraints = { path = "../constraints" }
commitments = { path = "../commitments" }

[dev-dependencies]
common = { path = "../common", features = ["test-utils"] }
