[package]
name = "fabric-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rocksdb = { workspace = true }
tempfile = {workspace = true}
hex = { workspace = true }
commit-boost = { workspace = true }
cb-common = { workspace = true }
alloy = { workspace = true }

# Metrics
prometheus = { workspace = true }
lazy_static = { workspace = true }

# HTTP server for metrics
axum = { workspace = true }

# Workspace dependencies
common = { package = "fabric-common", path = "../common" }
constraints = { package = "fabric-constraints", path = "../constraints" }
commitments = { package = "fabric-commitments", path = "../commitments" }

[dev-dependencies]
common = { package = "fabric-common", path = "../common", features = ["test-utils"] }
