[package]
name = "proposer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
commit-boost = { workspace = true }
cb-common = { workspace = true }
alloy = { workspace = true }
common = { path = "../common" }
constraints = { path = "../constraints" }

[dev-dependencies]
mockall = "0.12"
common = { path = "../common", features = ["test-utils"] }

