[package]
name = "fabric-proposer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
commit-boost = { workspace = true }
cb-common = { workspace = true }
alloy = { workspace = true }
common = { package = "fabric-common", path = "../common" }
constraints = { package = "fabric-constraints", path = "../constraints" }
urc = { workspace = true }
rocksdb = { workspace = true }

prometheus = { workspace = true }
lazy_static = { workspace = true }
axum = { workspace = true }

eth-keystore = "0.5"
clap = { version = "4.0", features = ["derive"] }
rpassword = "7.0"

[dev-dependencies]
mockall = "0.12"
common = { package = "fabric-common", path = "../common", features = ["test-utils"] }