[package]
name = "fabric-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
rocksdb = { workspace = true }

# Error handling
eyre = { workspace = true }

# BLS and crypto
commit-boost = { workspace = true }
cb-common = { workspace = true }

# Alloy for primitives
alloy = { workspace = true }

# Common types (reuse from our common crate)
common = { package = "fabric-common", path = "../common" }

# Constraints
constraints = { package = "fabric-constraints", path = "../constraints" }

# Configuration
toml = { workspace = true }

# Hex encoding/decoding
hex = { workspace = true }

# Date/time handling
chrono = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }

# HTTP client for proxying
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
